--- a/player.html
+++ b/player.html
@@ -7,16 +7,16 @@
   <style>
     html,body{margin:0;height:100%;background:#000;color:#fff;font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Kufi Arabic","Noto Sans Arabic",Arial,sans-serif}
     .wrap{min-height:100%;display:flex;flex-direction:column;gap:10px;align-items:center;justify-content:center;padding:16px}
-    video{width:min(100%,900px);height:auto;background:#000;border-radius:12px}
+    #p{width:min(100%,900px);aspect-ratio:16/9;background:#000;border-radius:12px;overflow:hidden}
     .bar{width:min(100%,900px);display:flex;justify-content:space-between;align-items:center}
     .title{font-weight:700}
     .btn{padding:10px 14px;border-radius:8px;border:0;background:#1976d2;color:#fff;cursor:pointer}
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
 </head>
 <body>
   <div class="wrap">
-    <video id="v" controls playsinline webkit-playsinline preload="metadata"></video>
+    <div id="p"></div>
     <div class="bar">
       <div class="title" id="t"></div>
       <button class="btn" onclick="location.reload()">إعادة تحميل</button>
@@ -27,18 +27,17 @@
     const src = q.get('src');
     const title = q.get('title')||'قناة مباشرة';
     document.getElementById('t').textContent = title;
-    const v = document.getElementById('v');
 
-    if (v.canPlayType('application/vnd.apple.mpegURL')) {
-      v.src = src; v.play().catch(()=>{});
-    } else if (window.Hls && Hls.isSupported()){
-      const hls = new Hls({ enableWorker:true });
-      hls.loadSource(src);
-      hls.attachMedia(v);
-      hls.on(Hls.Events.MANIFEST_PARSED, () => v.play().catch(()=>{}));
-    } else {
-      v.src = src; v.play().catch(()=>{});
-    }
+    let clap = new Clappr.Player({
+      source: src,
+      parentId: "#p",
+      autoPlay: true,
+      mute: false,
+      playback: { crossOrigin: "anonymous", hlsjsConfig: { lowLatencyMode: true } },
+      mediacontrol: { seekbar: "#ffc107", buttons: "#ffffff" },
+      width: "100%",
+      height: "100%",
+    });
   </script>
 </body>
 </html>
