--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
-  <title>القنوات الرياضية – VLC فقط</title>
+  <title>القنوات الرياضية – روابط m3u8 مباشرة</title>
   <style>
     :root{ --safe-pad:32px; --radius:22px; --focus-ring:5px; --accent:#ffc107; --v-gap:16px; --max-w:600px; }
     @media (min-width:2560px){ :root{ --safe-pad:44px; --max-w:1100px; } }
@@ -31,175 +31,79 @@
 <body>
   <div class="page">
     <header>
-      <h1>القنوات الرياضية – VLC فقط</h1>
-      <div class="sub">اضغط على القناة لفتحها مباشرة في تطبيق VLC على الجوال</div>
+      <h1>القنوات الرياضية – روابط m3u8 مباشرة</h1>
+      <div class="sub">اضغط على القناة لفتح رابط m3u8 مباشرة في أي مشغّل يدعمها (الجوال أو الكمبيوتر)</div>
     </header><main>
-  <div class="stack" id="stack" role="list">
+  <div class="stack" id="stack">
     <!-- لافتة افتتاحية -->
-    <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation">
+    <div class="tile banner" aria-hidden="true" role="presentation">
       <img class="thumb" loading="lazy" src="https://www4.0zz0.com/2024/02/01/09/100522793.png" alt="" />
     </div>
 
     <!-- القنوات 1 - 5 -->
-    <a class="tile link" href="#" data-id="1"  tabindex="0" aria-label="قناة 1"><img class="thumb" loading="lazy" src="https://i.suar.me/VWaMw/l" alt="قناة 1" /></a>
-    <a class="tile link" href="#" data-id="2"  tabindex="0" aria-label="قناة 2"><img class="thumb" loading="lazy" src="https://i.suar.me/QJQKW/l" alt="قناة 2" /></a>
-    <a class="tile link" href="#" data-id="3"  tabindex="0" aria-label="قناة 3"><img class="thumb" loading="lazy" src="https://i.suar.me/9NjMe/l" alt="قناة 3" /></a>
-    <a class="tile link" href="#" data-id="4"  tabindex="0" aria-label="قناة 4"><img class="thumb" loading="lazy" src="https://i.suar.me/YJqzY/l" alt="قناة 4" /></a>
-    <a class="tile link" href="#" data-id="5"  tabindex="0" aria-label="قناة 5"><img class="thumb" loading="lazy" src="https://i.suar.me/7qOgo/l" alt="قناة 5" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483688.m3u8" aria-label="قناة 1" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/VWaMw/l" alt="قناة 1" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483657.m3u8" aria-label="قناة 2" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/QJQKW/l" alt="قناة 2" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483660.m3u8" aria-label="قناة 3" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/9NjMe/l" alt="قناة 3" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483663.m3u8" aria-label="قناة 4" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/YJqzY/l" alt="قناة 4" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483667.m3u8" aria-label="قناة 5" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/7qOgo/l" alt="قناة 5" /></a>
 
     <!-- 11 - 14 -->
-    <a class="tile link" href="#" data-id="11" tabindex="0" aria-label="قناة 11"><img class="thumb" loading="lazy" src="https://i.suar.me/edGM0/l" alt="قناة 11" /></a>
-    <a class="tile link" href="#" data-id="12" tabindex="0" aria-label="قناة 12"><img class="thumb" loading="lazy" src="https://i.suar.me/OJea8/l" alt="قناة 12" /></a>
-    <a class="tile link" href="#" data-id="13" tabindex="0" aria-label="قناة 13"><img class="thumb" loading="lazy" src="https://i.suar.me/jxBMz/l" alt="قناة 13" /></a>
-    <a class="tile link" href="#" data-id="14" tabindex="0" aria-label="قناة 14"><img class="thumb" loading="lazy" src="https://i.suar.me/LV1xG/l" alt="قناة 14" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483669.m3u8" aria-label="قناة 11" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/edGM0/l" alt="قناة 11" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483672.m3u8" aria-label="قناة 12" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/OJea8/l" alt="قناة 12" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483675.m3u8" aria-label="قناة 13" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/jxBMz/l" alt="قناة 13" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/483678.m3u8" aria-label="قناة 14" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/LV1xG/l" alt="قناة 14" /></a>
 
     <!-- لافتة وسط -->
-    <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation">
+    <div class="tile banner" aria-hidden="true" role="presentation">
       <img class="thumb" loading="lazy" src="https://www4.0zz0.com/2024/02/01/09/194995613.png" alt="" />
     </div>
 
     <!-- 6 - 10 -->
-    <a class="tile link" href="#" data-id="6" tabindex="0" aria-label="قناة 6"><img class="thumb" loading="lazy" src="https://i.suar.me/za2GV/l" alt="قناة 6" /></a>
-    <a class="tile link" href="#" data-id="7" tabindex="0" aria-label="قناة 7"><img class="thumb" loading="lazy" src="https://i.suar.me/ZPe4w/l" alt="قناة 7" /></a>
-    <a class="tile link" href="#" data-id="8" tabindex="0" aria-label="قناة 8"><img class="thumb" loading="lazy" src="https://i.suar.me/XA56X/l" alt="قناة 8" /></a>
-    <a class="tile link" href="#" data-id="9" tabindex="0" aria-label="قناة 9"><img class="thumb" loading="lazy" src="https://i.suar.me/GVzGg/l" alt="قناة 9" /></a>
-    <a class="tile link" href="#" data-id="10" tabindex="0" aria-label="قناة 10"><img class="thumb" loading="lazy" src="https://i.suar.me/y2Lmq/l" alt="قناة 10" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689531.m3u8" aria-label="قناة 6" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/za2GV/l" alt="قناة 6" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689534.m3u8" aria-label="قناة 7" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/ZPe4w/l" alt="قناة 7" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689535.m3u8" aria-label="قناة 8" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/XA56X/l" alt="قناة 8" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689536.m3u8" aria-label="قناة 9" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/GVzGg/l" alt="قناة 9" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689539.m3u8" aria-label="قناة 10" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/y2Lmq/l" alt="قناة 10" /></a>
 
     <!-- 15 - 17 -->
-    <a class="tile link" href="#" data-id="15" tabindex="0" aria-label="قناة 15"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0yy/l" alt="قناة 15" /></a>
-    <a class="tile link" href="#" data-id="16" tabindex="0" aria-label="قناة 16"><img class="thumb" loading="lazy" src="https://i.suar.me/32YWj/l" alt="قناة 16" /></a>
-    <a class="tile link" href="#" data-id="17" tabindex="0" aria-label="قناة 17"><img class="thumb" loading="lazy" src="https://i.suar.me/oxe8O/l" alt="قناة 17" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689557.m3u8" aria-label="قناة 15" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0yy/l" alt="قناة 15" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689559.m3u8" aria-label="قناة 16" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/32YWj/l" alt="قناة 16" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/689546.m3u8" aria-label="قناة 17" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/oxe8O/l" alt="قناة 17" /></a>
 
     <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/4aJYv/l" alt="" /></div>
+    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/4aJYv/l" alt="" /></div>
 
     <!-- 18 - 20 -->
-    <a class="tile link" href="#" data-id="18" tabindex="0" aria-label="قناة 18"><img class="thumb" loading="lazy" src="https://i.suar.me/GVl1N/l" alt="قناة 18" /></a>
-    <a class="tile link" href="#" data-id="19" tabindex="0" aria-label="قناة 19"><img class="thumb" loading="lazy" src="https://i.suar.me/KXOPZ/l" alt="قناة 19" /></a>
-    <a class="tile link" href="#" data-id="20" tabindex="0" aria-label="قناة 20"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoZx/l" alt="قناة 20" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/69195.m3u8" aria-label="قناة 18" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/GVl1N/l" alt="قناة 18" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/69196.m3u8" aria-label="قناة 19" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/KXOPZ/l" alt="قناة 19" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/178390.m3u8" aria-label="قناة 20" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoZx/l" alt="قناة 20" /></a>
 
     <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoPW/l" alt="" /></div>
+    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/QJoPW/l" alt="" /></div>
 
     <!-- 21 - 23 -->
-    <a class="tile link" href="#" data-id="21" tabindex="0" aria-label="قناة 21"><img class="thumb" loading="lazy" src="https://i.suar.me/nx59x/l" alt="قناة 21" /></a>
-    <a class="tile link" href="#" data-id="22" tabindex="0" aria-label="قناة 22"><img class="thumb" loading="lazy" src="https://i.suar.me/LVdjx/l" alt="قناة 22" /></a>
-    <a class="tile link" href="#" data-id="23" tabindex="0" aria-label="قناة 23"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0aO/l" alt="قناة 23" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/222044.m3u8" aria-label="قناة 21" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/nx59x/l" alt="قناة 21" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/222045.m3u8" aria-label="قناة 22" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/LVdjx/l" alt="قناة 22" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/222047.m3u8" aria-label="قناة 23" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/8e0aO/l" alt="قناة 23" /></a>
 
     <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/rWdY7/l" alt="" /></div>
+    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://i.suar.me/rWdY7/l" alt="" /></div>
 
     <!-- 24 - 25 -->
-    <a class="tile link" href="#" data-id="24" tabindex="0" aria-label="قناة 24"><img class="thumb" loading="lazy" src="https://i.suar.me/wWodN/l" alt="قناة 24" /></a>
-    <a class="tile link" href="#" data-id="25" tabindex="0" aria-label="قناة 25"><img class="thumb" loading="lazy" src="https://i.suar.me/g8veK/l" alt="قناة 25" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/362201.m3u8" aria-label="قناة 24" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/wWodN/l" alt="قناة 24" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/362204.m3u8" aria-label="قناة 25" rel="external"><img class="thumb" loading="lazy" src="https://i.suar.me/g8veK/l" alt="قناة 25" /></a>
 
     <!-- لافتة -->
-    <div class="tile banner" aria-hidden="true" tabindex="-1" role="presentation"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" alt="" /></div>
+    <div class="tile banner" aria-hidden="true" role="presentation"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" alt="" /></div>
 
     <!-- 26 - 28 -->
-    <a class="tile link" href="#" data-id="26" tabindex="0" aria-label="قناة 26"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26" /></a>
-    <a class="tile link" href="#" data-id="27" tabindex="0" aria-label="قناة 27"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27" /></a>
-    <a class="tile link" href="#" data-id="28" tabindex="0" aria-label="قناة 28"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/763544.m3u8" aria-label="قناة 26" rel="external"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/763547.m3u8" aria-label="قناة 27" rel="external"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27" /></a>
+    <a class="tile link" href="http://storatv.com/live/0543539887/2280625079/763550.m3u8" aria-label="قناة 28" rel="external"><img class="thumb" loading="lazy" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28" /></a>
   </div>
 </main>
 
 <footer>Abu Faris TV Sport</footer>
 
-  </div>  <script>
-    // ===== روابط القنوات (الأصلية) =====
-    const RAW = {
-      1:"http://storatv.com/live/0543539887/2280625079/483688.m3u8",
-      2:"http://storatv.com/live/0543539887/2280625079/483657.m3u8",
-      3:"http://storatv.com/live/0543539887/2280625079/483660.m3u8",
-      4:"http://storatv.com/live/0543539887/2280625079/483663.m3u8",
-      5:"http://storatv.com/live/0543539887/2280625079/483667.m3u8",
-      6:"http://storatv.com/live/0543539887/2280625079/689531.m3u8",
-      7:"http://storatv.com/live/0543539887/2280625079/689534.m3u8",
-      8:"http://storatv.com/live/0543539887/2280625079/689535.m3u8",
-      9:"http://storatv.com/live/0543539887/2280625079/689536.m3u8",
-      10:"http://storatv.com/live/0543539887/2280625079/689539.m3u8",
-      11:"http://storatv.com/live/0543539887/2280625079/483669.m3u8",
-      12:"http://storatv.com/live/0543539887/2280625079/483672.m3u8",
-      13:"http://storatv.com/live/0543539887/2280625079/483675.m3u8",
-      14:"http://storatv.com/live/0543539887/2280625079/483678.m3u8",
-      15:"http://storatv.com/live/0543539887/2280625079/689557.m3u8",
-      16:"http://storatv.com/live/0543539887/2280625079/689559.m3u8",
-      17:"http://storatv.com/live/0543539887/2280625079/689546.m3u8",
-      18:"http://storatv.com/live/0543539887/2280625079/69195.m3u8",
-      19:"http://storatv.com/live/0543539887/2280625079/69196.m3u8",
-      20:"http://storatv.com/live/0543539887/2280625079/178390.m3u8",
-      21:"http://storatv.com/live/0543539887/2280625079/222044.m3u8",
-      22:"http://storatv.com/live/0543539887/2280625079/222045.m3u8",
-      23:"http://storatv.com/live/0543539887/2280625079/222047.m3u8",
-      24:"http://storatv.com/live/0543539887/2280625079/362201.m3u8",
-      25:"http://storatv.com/live/0543539887/2280625079/362204.m3u8",
-      26:"http://storatv.com/live/0543539887/2280625079/763544.m3u8",
-      27:"http://storatv.com/live/0543539887/2280625079/763547.m3u8",
-      28:"http://storatv.com/live/0543539887/2280625079/763550.m3u8"
-    };
-
-    // خيار بروكسي لتجاوز الـ Referer إن لزم
-    const PROXY_ORIGIN = 'https://abufaris.salyami1980.workers.dev';
-    const useProxy = true; // غيّرها إلى false لو أردت الروابط الأصلية
-    const prox = (u) => `${PROXY_ORIGIN}/?url=${encodeURIComponent(u)}&ref=${encodeURIComponent('http://storatv.com/')}`;
-
-    function getPlayableUrl(id){
-      const raw = RAW[id];
-      if(!raw) return null;
-      return useProxy ? prox(raw) : raw;
-    }
-
-    // فتح حصري في VLC (جوال فقط)
-    function openInVLC(url, title){
-      const ua = navigator.userAgent || '';
-      const isAndroid = /Android/i.test(ua);
-      const isiOS = /iPhone|iPad|iPod/i.test(ua);
-
-      if (isiOS){
-        const deeplink = `vlc-x-callback://x-callback-url/stream?url=${encodeURIComponent(url)}&title=${encodeURIComponent(title||'Stream')}`;
-        const timer = setTimeout(()=>{
-          alert('يبدو أن VLC غير مُثبت على جهازك. ثبّت VLC ثم أعد المحاولة.');
-        }, 1200);
-        try{ window.location.href = deeplink; }catch{ clearTimeout(timer); }
-        return;
-      }
-
-      if (isAndroid){
-        try {
-          const u = new URL(url);
-          const intent = `intent://${u.host}${u.pathname}${u.search}` +
-                         `#Intent;scheme=${u.protocol.replace(':','')};` +
-                         `package=org.videolan.vlc;end`;
-          const timer = setTimeout(()=>{
-            try{ window.location.href = `vlc://${url}`; }catch(e){}
-            setTimeout(()=>{
-              if (confirm('VLC غير مُثبت. هل تريد فتح صفحة التثبيت في المتجر؟')){
-                window.location.href = 'market://details?id=org.videolan.vlc';
-              }
-            }, 800);
-          }, 1000);
-          window.location.href = intent;
-        } catch(e){
-          alert('تعذّر فتح VLC. تأكّد من تثبيته ثم أعد المحاولة.');
-        }
-        return;
-      }
-
-      alert('هذا الرابط مُصمّم للعمل على الجوال مع تطبيق VLC فقط.');
-    }
-
-    // التعامل مع النقر على البطاقات
-    document.addEventListener('click', (e) => {
-      const a = e.target.closest('a.tile.link'); if(!a) return;
-      e.preventDefault();
-      const id = a.getAttribute('data-id');
-      const url = getPlayableUrl(id);
-      if(!url){ alert('لا يوجد رابط'); return; }
-      const title = a.getAttribute('aria-label') || ('قناة ' + id);
-      openInVLC(url, title);
-    });
-
-    // تحسين أولي للتركيز بالريموت
-    (function () { const first = document.querySelector('.tile.link'); if (first){ first.focus({preventScroll:true}); first.scrollIntoView({block:'center'}); } })();
-  </script></body>
+  </div>  <!-- لا يوجد أي سكربت: روابط مباشرة فقط، بلا ريموت وبلا مشغّل داخلي --></body>
 </html>
